Bug 1267565 - Re-enable JIT inlining for std_Array. r=efaust